# mobile_robot_demo

./: .gitignore  .gitmodules  README.md  install.zsh
.devcontainer/: Dockerfile  clangd.yaml  devcontainer.json  entrypoint.sh  sources.list  supervisord.conf
env_files/clangd/: config.aarch64.yaml
src/bringup/mm_robot_bringup/: package.xml
src/gps_nav_demo/mm_gps_nav_bringup/: CMakeLists.txt  package.xml
src/gps_nav_demo/mm_gps_nav_bringup/configs/: controllers.yaml  ekf.yaml  nav2.yaml  nav_through_poses_bt.xml
src/gps_nav_demo/mm_gps_nav_bringup/launch/: bringup.launch.py
src/gps_nav_demo/mm_gps_nav_gps_controller/: CMakeLists.txt  package.xml
src/gps_nav_demo/mm_gps_nav_gps_controller/include/mm_gps_nav_gps_controller/: gps_controller.hpp
src/gps_nav_demo/mm_gps_nav_gps_controller/launch/: gps.launch.py
src/gps_nav_demo/mm_gps_nav_gps_controller/src/: sim_gps_controller.cpp  wit_gps_controller.cpp
src/gps_nav_demo/mm_gps_nav_imu_controller/: CMakeLists.txt  package.xml
src/gps_nav_demo/mm_gps_nav_imu_controller/include/mm_gps_nav_imu_controller/: imu_controller.hpp
src/gps_nav_demo/mm_gps_nav_imu_controller/launch/: imu.launch.py
src/gps_nav_demo/mm_gps_nav_imu_controller/src/: sim_imu_controller.cpp  tarkbot_imu_controller.cpp
src/gps_nav_demo/mm_gps_nav_simulation/: CMakeLists.txt  package.xml
src/gps_nav_demo/mm_gps_nav_simulation/configs/: ekf.yaml  nav2.yaml  twist_mux.yaml
src/gps_nav_demo/mm_gps_nav_simulation/launch/: rsp.launch.py
src/gps_nav_demo/mm_gps_nav_simulation/urdf/: gazebo.xacro  robot.urdf.xacro
src/gps_nav_demo/mm_gps_nav_simulation/urdf/ros2_control/: wheel.xacro
src/mm_robot/: CMakeLists.txt  diffdrive.xml  package.xml
src/mm_robot/include/mm_robot/: diffdrive.hpp  tarkbot.hpp
src/mm_robot/launch/: robot.launch.py
src/mm_robot/src/: diffdrive.cpp  tarkbot.cpp
src/mm_robot_bringup/: CMakeLists.txt
src/mm_robot_bringup/configs/: rviz.rviz
src/mm_robot_bringup/launch/: bringup.launch.py  ros2_control.launch.py  rviz.launch.py
src/mm_robot_description/: package.xml
src/mm_robot_description/launch/: rsp.launch.py  urdf.launch.py
src/mm_robot_description/urdf/: robot.urdf.xacro  robot_chassis.xacro  robot_core.xacro  robot_gps.xacro
src/mm_robot_description/urdf/ros2_control/: wheel.xacro
src/robot_core/mm_robot_description/: CMakeLists.txt
src/robot_core/mm_robot_description/urdf/: robot_core.xacro  robot_imu.xacro
src/robot_core/mm_robot_simulation/: CMakeLists.txt  package.xml
src/robot_core/mm_robot_simulation/configs/: controllers.yaml
src/robot_core/mm_robot_simulation/launch/: rsp.launch.py
src/robot_core/mm_robot_simulation/urdf/: gazebo.xacro  robot.urdf.xacro
src/robot_core/mm_robot_simulation/urdf/ros2_control/: wheel.xacro
src/robot_core/mm_robot_simulation/worlds/: empty.world
